--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -25,16 +25,7 @@
         </form>
       </div>
 
-    {{!-- <select class="star-rating">
-      <option value="">Select a rating</option>
-      <option value="5">Excellent</option>
-      <option value="4">Very Good</option>
-      <option value="3">Average</option>
-      <option value="2">Poor</option>
-      <option value="1">Terrible</option>
-    </select> --}}
-
-    <script src="/javascript/star-rating-min.js"></script>
+    <script src="/javascript/star-rating.min.js"></script>
     <script>
       var stars = new StarRating('.star-rating');
     </script>
