--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,7 @@
     <title>Art Garage</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <link rel="icon" type="image/x-icon" href="../../images/am52r-bb94x-001.ico">
+    <link href="stylesheets/star-rating.css" rel="stylesheet">
   </head>
   <body>
 
@@ -33,11 +34,10 @@
         {{{ body }}}
       </main>
       </div>
-      {{!-- MAIN CONTENT END --}}
-
-      {{!-- <footer>
-        Thank you for visiting Art Garage!
-      </footer> --}}
+    <script src="javascript/star-rating.min.js"></script>
+    <script>
+      var stars = new StarRating('.star-rating');
+    </script>
 
   </body>
 </html>
