--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,7 +12,7 @@
               <input type="password" name="password" id="password-login" />
             </div>
             <div class="signup-or-login-container">
-              <button class="login-link login-button">Login Now</button>
+              <a href="/dashboard" class="login-link login-button">Login Now</a>
             </div>
             </div>
           </form>
