--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,4 +1,4 @@
-<section class="star-rating">
+{{!-- <section class="star-rating">
   <a href="/profile/{{id}}">
 
     <header>{{name}}</header>
@@ -12,4 +12,4 @@
     <option value="2">Poor</option>
     <option value="1">Terrible</option>
 </select>
-</section>
+</section> --}}
