--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,1 +1,14 @@
-;
+{{!-- <section class="star-rating">
+  <a href="/profile/{{id}}">
+    <header>{{name}}</header>
+    <img src="/images/{{paintings.[0].filename}}" alt="{{paintings.[0].description}}">
+  </a>
+    <select class="star-rating">
+    <option value="">Select a rating</option>
+    <option value="5">Excellent</option>
+    <option value="4">Very Good</option>
+    <option value="3">Average</option>
+    <option value="2">Poor</option>
+    <option value="1">Terrible</option>
+</select>
+</section> --}}
