--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -24,7 +24,7 @@
           hic, pariatur perspiciatis labore asperiores dolorem beatae repellat
           earum inventore placeat nobis expedita? Porro ducimus iusto tenetur
           harum consequatur fugiat.</p>
-        <a href="/bio"><h2 class="view-profile">View full profile
+        <a href="/profile/1"><h2 class="view-profile">View full profile
             <span class="arrow">&#11136</span></h2></a>
       </div>
     </div>
