--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,6 +1,6 @@
       <div class="buyer-single-post-container">
         <h1 class="buyer-comment-title">Post A Comment!</h1>
-        <form action="/api/comment" method="post" class="buyer-comment-form">
+        <form class="buyer-comment-form">
            <div>
               <label for="comment-title">Comment Title</label>
               <input type="title" id="comment-title" />
@@ -10,7 +10,7 @@
               <textarea name="comment-text" id="comment-text" rows="5"></textarea>
             </div>
             <div class="submit-comment">
-              <a href="/profile/1" class="submit-buyer-comment">Submit Comment</a>
+              <a class="submit-buyer-comment">Submit Comment</a>
             <div class="star-rating-container">
                <select class="star-rating">
                   <option value="">Select A Rating</option>
@@ -38,3 +38,5 @@
     <script>
       var stars = new StarRating('.star-rating');
     </script>
+
+    <script src="/javascript/comment.js"></script>
