--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-      <div class="login-container">
+   <div class="login-container">
           <form class="login-form" method="post" action="/api/users/login">
             <h1 class="login-title">Welcome Back!</h1>
             <p class="login-text">We're glad you made it back! Please login below.</p>
@@ -12,7 +12,7 @@
               <input type="password" name="password" id="password-login" />
             </div>
             <div class="signup-or-login-container">
-              <button class="login-link login-button">Login Now</button>
+              <a href="/dashboard" class="login-link login-button">Login Now</a>
             </div>
             </div>
           </form>
