--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,4 +1,4 @@
- {{!-- Dashboard content container --}}
+   {{!-- Dashboard content container --}}
     <div class="dashboard-container">
           <div class="dashboard-heading">
             <h1 class="dashboard-title">Welcome to the Artist Showcase Page!</h1>
@@ -15,7 +15,7 @@
               <div class="artist-info">
                 <h2 class="artist-name">Jonathan Franklin</h2>
                 <p class="artist-bio">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae, alias consequatur eius facere blanditiis hic, pariatur perspiciatis labore asperiores dolorem beatae repellat earum inventore placeat nobis expedita? Porro ducimus iusto tenetur harum consequatur fugiat.</p>
-                <a href="/bio"><h2 class="view-profile">View full profile <span class="arrow">&#11136</span></h2></a>
+                <a href="/profile/1"><h2 class="view-profile">View full profile <span class="arrow">&#11136</span></h2></a>
               </div>
             </div>
         </div>
