--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -8,9 +8,9 @@
         <div class="dashboard-artist-column">
             <div class="feature-artist-container">
               {{!-- This container holds the img/artwork thumbnail: --}}
-              <div class="artwork-container">
+              {{!-- <div class="artwork-container">
                 <img class="artwork-image" src="../../images/painting-sample.jpg" alt="nature oil paiting">
-              </div>
+              </div> --}}
               {{!-- This container holds the artist name, short bio snippet and link to profile: --}}
               <div class="artist-info">
                 <h2 class="artist-name">Jonathan Franklin</h2>
