stars and comments

--- a/views/artist-profile-page.handlebars
+++ b/views/artist-profile-page.handlebars
@@ -46,4 +46,8 @@
               This painting reminds me of when I was a child visiting my grandparents. This really takes me back and I just might put in an offer for the painting!
             </p>
           </div>
+
+        </div>
+        <div class="profile-comments-container">
+          {{> comments}}
         </div>
