revised files: style.css, handlebars files, JS files, README file

--- a/views/artist-update-page.handlebars
+++ b/views/artist-update-page.handlebars
@@ -49,7 +49,7 @@
             <!-- SAMPLE FORM -->
             
             <div class="artist-update-container">
-              <button class="artist-update-profile-button update-link">Update Profile</button>
+              <button class="artist-update-profile-button update-link" id="update-page-button">Update Profile</button>
               <a href="/artist/id" class="view-link"><button class="artist-view-profile-button">View Profile</button></a>
               <a href="/api/profile/delete" class="delete-link artist-delete-profile-button">Delete Profile</a>
             </div>
