--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -13,9 +13,9 @@
               </div> --}}
               {{!-- This container holds the artist name, short bio snippet and link to profile: --}}
               <div class="artist-info">
-                <h2 class="artist-name">Jonathan Franklin</h2>
-                <p class="artist-bio">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae, alias consequatur eius facere blanditiis hic, pariatur perspiciatis labore asperiores dolorem beatae repellat earum inventore placeat nobis expedita? Porro ducimus iusto tenetur harum consequatur fugiat.</p>
-                <a href="/profile/1"><h2 class="view-profile">View full profile <span class="arrow">&#11136</span></h2></a>
+                <h2 class="artist-name" id="dashboard-artist-name">Louis Escobedo</h2>
+                <p class="artist-bio" id="bio-snippet">Louis Escobedo was born in Sweetwater, Texas, and received a BFA in Advertising Art from Sam Houston State University in Huntsville, Texas. He began his painting career at age 6 when he won the best of show in his elementary school in Sweetwater Texas.  In 1974, after graduation from college he began his career as an artist honing his talents to become a freelance illustrator in Texas. In 1979, he finally achieved his goal.</p>
+                <a href="/profile/1"><h2 class="view-profile" id="view-profile-link">View full profile <span class="arrow" id="arrow-link">&#11136</span></h2></a>
               </div>
             </div>
         </div>
