--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -264,11 +264,13 @@ button:hover {
 
 .dashboard-artist-column {
   width: 100%;
+  padding: 30px;
 }
 
 .feature-artist-container {
   background-color: white;
   border-radius: 10px;
+  box-shadow: 0px 5px 11px rgba(110, 159, 183, 0.2);
 }
 
 .dashboard-heading {
@@ -465,7 +467,7 @@ input {
 
 .artist-update-profile-button {
   cursor: pointer;
-  padding: 10px 20px;
+  padding: 10px 18px;
   border-radius: 3px;
   border: none;
   font-size: 16px;
@@ -753,6 +755,33 @@ input {
 .buyer-comments {
   font-style: italic;
   font-size: 16px;
+}
+
+.artist-info {
+  padding: 35px;
+}
+
+#dashboard-artist-name {
+  font-size: 36px;
+  padding-bottom: 15px;
+  font-weight: 400;
+}
+
+#bio-snippet {
+  line-height: 24px;
+  color: var(--med-gray);
+}
+
+#view-profile-link {
+  color: var(--green);
+  font-size: 20px;
+  padding-top: 15px;
+}
+
+#arrow-link {
+  position: relative;
+  font-size: 12px;
+  top: -2px;
 }
 
 
