--- a/views/artist-profile-page.handlebars
+++ b/views/artist-profile-page.handlebars
@@ -28,8 +28,8 @@
               <p id="artwork-description">{{ profileData.art_description }}
               </p>
             <div class="artwork-container">
-              <img src="../../images/painting-sample.jpg" alt="Oil Painting">
-              <a href="/update-profile" class="update-link"><button class="update-profile-button" id="update-from-profile">Update My Profile</button></a>
+              {{!-- <img src="../../images/painting-sample.jpg" alt="Oil Painting"> --}}
+              <a href="/update-profile" class="update-link update-profile-button" id="update-from-profile">Update My Profile</a>
             </div>
         </div>
         </div>
