--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -377,10 +377,14 @@ input {
   border-radius: 10px;
 }
 
-.signup-or-login-container, .artist-update-container {
+.signup-or-login-container {
   align-items: center;
   display: flex;
   padding-top: 10px;
+}
+
+.artist-update-container {
+  padding-top: 0;
 }
 
 .buyer-signup-button {
@@ -619,7 +623,7 @@ input {
   width: 100%;
   background-color: white;
   box-shadow: 0px 5px 11px rgba(110, 159, 183, 0.2);
-  padding: 35px;
+  padding: 35px 35px 45px 35px;
   border-radius: 10px;
 }
 
@@ -731,21 +735,45 @@ input {
 
 .artwork-container {
   position: relative;
-  display: flex;
-  justify-content: space-between;
+  /* display: flex; */
+  /* justify-content: space-between; */
+}
+
+.button-instructions {
+  padding-top: 15px;
 }
 
 .update-profile-button {
+  margin-top: 20px;
   position: relative;
   background-color: white;
   border: 3px solid var(--blue);
   color: var(--blue);
-  top: 260px;
+  /* top: 260px; */
 }
 
 .update-profile-button:hover, .submit-buyer-comment:hover {
   background-color: var(--blue);
   color: white;
+}
+
+#artwork-description {
+  padding-bottom: 20px;
+}
+
+.update-link {
+  cursor: pointer;
+  padding: 10px 20px;
+  border-radius: 3px;
+  border: none;
+  font-size: 16px;
+  transition: all 0.3s;
+  margin: 15px 0 15px 0;
+  background-color: white;
+  border: 3px solid var(--blue);
+  color: var(--blue);
+  width: 165px;
+  text-align: center;
 }
 
 .comment-title {
@@ -782,6 +810,14 @@ input {
   position: relative;
   font-size: 12px;
   top: -2px;
+}
+
+#update-from-profile {
+  margin-bottom: 20px;
+}
+
+.button-instructions {
+  font-size: 15px;
 }
 
 
